--- a/native/sunshine/Cargo.toml
+++ b/native/sunshine/Cargo.toml
@@ -21,7 +21,7 @@ package = "sunshine-client"
 git = "https://github.com/sunshine-protocol/sunshine-identity"
 package = "sunshine-identity-ffi"
 default-features = false
-features = ["identity-wallet", "identity-key", "identity-device", "identity-id"]
+features = ["identity-wallet", "identity-key", "identity-device", "identity-id", "identity-account"]
 
 [dependencies.faucet-ffi]
 git = "https://github.com/sunshine-protocol/sunshine-identity"
